syntax = "proto3";

option java_multiple_files = true;
option java_package = "protobuf.users";

package users;

message UsersProto {
  string id = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  int64 age = 5;
  string firstName = 6;
  string middleName = 7;
  string lastName = 8;
  repeated ClothesProto clothesOrder = 9;
}

message ClothesProto{
  string id = 1;
  string name = 2;
  string size = 3;
  int32 quantity = 4;
  double price = 5;
  PaymentInfo payment = 6;
  string isbnOfCloth = 7;
}

enum PaymentInfo {
  PAID = 0;
  NOT_PAID = 1;
  IN_SHOP = 2;
}

service UsersService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string phone = 3;
  int64 age = 4;
  string firstName = 6;
  string middleName = 7;
  string lastName = 8;
}

message RegisterUserResponse {
    UsersProto users = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string message = 1;
}

message UpdateUserRequest {
  string email = 1;
  string password = 2;
  string phone = 3;
  int64 age = 4;
}

message UpdateUserResponse {
  UsersProto users = 1;
}

message DeleteUserRequest {
  string email = 1;
}

message DeleteUserResponse {
  string email = 1;
  string message = 2;
}


